vlib/v/parser/tests/struct_field_unknown_module_a.vv
struct Inter {
	code ui.KeyCode
}
